ayame-app/errors.txt
warning: variants `SubBegin` and `SubEnd` are never constructed
  --> aozora-rs-xhtml\src\xhtmlnize\definitions.rs:17:5
   |
4  | pub enum XHTMLKind<'s> {
   |          --------- variants in this enum
...
17 |     SubBegin,
   |     ^^^^^^^^
18 |     SubEnd,
   |     ^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: `aozora-rs-xhtml` (lib) generated 1 warning
    Checking ayame-app v0.1.0 (C:\Projects\PersonalProjects\aozora-rs\ayame-app)
warning: unused imports: `img` and `relative`
 --> ayame-app\src\main.rs:6:94
  |
6 |     App, Application, Bounds, Context, FontWeight, Window, WindowBounds, WindowOptions, div, img,
  |                                                                                              ^^^
7 |     prelude::*, px, relative, rgb, rgba, size,
  |                     ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0618]: expected function, found `&Vec<u8>`
   --> ayame-app\src\main.rs:109:30
    |
108 |         let cover = if let Some((img, ext)) = self.cover.as_ref() {
    |                                  --- `img` has type `&Vec<u8>`
109 |             cover_base.child(img(img))
    |                              ^^^-----
    |                              |
    |                              call expression requires function

error[E0308]: `if` and `else` have incompatible types
   --> ayame-app\src\main.rs:111:13
    |
108 |            let cover = if let Some((img, ext)) = self.cover.as_ref() {
    |  ______________________-
109 | |              cover_base.child(img(img))
    | |              -------------------------- expected because of this
110 | |          } else {
111 | |/             cover_base
112 | ||                 .border_2()
113 | ||                 .border_color(rgb(outline))
114 | ||                 .border_dashed()
115 | ||                 .child(select_btn.bg(rgb(0x162032)))
116 | ||                 .child(div().text_color(rgb(light_text)).child("陦ｨ邏吶ｒ驕ｸ謚・));
    | ||                                                                              ^
    | ||                                                                              |
    | ||______________________________________________________________________________help: consider removing this semicolon
    | |                                                                               expected `Div`, found `()`
117 | |          };
    | |__________- `if` and `else` have incompatible types

Some errors have detailed explanations: E0308, E0618.
For more information about an error, try `rustc --explain E0308`.
warning: `ayame-app` (bin "ayame-app") generated 1 warning
error: could not compile `ayame-app` (bin "ayame-app") due to 2 previous errors; 1 warning emitted
